[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "acedata-python"
version = "1.0.0"
description = "Python SDK for AceData Cloud unified AI API — GPT / Claude / Gemini / Suno / Midjourney / Veo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://platform.acedata.cloud"
Documentation = "https://platform.acedata.cloud/docs"
Repository = "https://github.com/RaiderYi/acedata-python"

[tool.setuptools.packages.find]
include = ["acedata*"]
